project_sample/site_media/schedule.css
div.slot_column {
  position:absolute;
  top:0px;
 left:0px;
  border:1px solid black;
  border-right:none;
}

div.slot {
  position:absolute;
  left:0px;
  border-bottom:1px dotted grey;
}

div.occ_column {
  position:absolute;
  border:1px solid black;
  top:0px;
}

div.occ {
  position:absolute;
  border:1px solid red;
  background-color:#eee;
  overflow:hidden;
}

div.type0 {
  border-bottom:4px dotted gray;
}

div.type3 {
  border-top:4px dotted gray;
}

div.event_options div.title {
  float:left;
}

div.event_options div.buttons {
  float:right;
}

table.calendar {
	border-collapse: separate;
	border-spacing: 2px
}

.dateheader {
	height: 30px;
	text-align: center
}

.daysofweek {
	height: 20px;
	text-align: center
}

table.calendar td {
  text-align:left;
	margin: 2px;
	padding: 1px;
}

table.calendar td.daynumber {
	font-size: 8pt;
	vertical-align: top
}

table.calendar td.noday {
	background-color: #eef
}

table.calendar td.free {
	background-color: #c5dbff
}

table.calendar td.busy {
	background-color: #ffcece
}

table.calendar td.compact {
	width: 28px;
	height: 20px;
	text-align: center
}

div.navigation {
  text-align:center;
}

div.navigation a {
  padding:0 20px;
}

div.tablewrapper {
    text-align:center;
}

div.calendarname {
    font-weight:bold;
}

